# moxy

./: BACKLOG.md  CMP.md  Cargo.toml  README.md
.github/workflows/: book.yml
book/: book.toml
book/src/: 00-introduction.md  01-getting-started.md  04-features.md  05-attribute-reference.md  06-attribute-reference.md  07-features.md  08-attribute-reference.md  SUMMARY.md
book/src/02-display/: 00-index.md  01-formats.md  02-pretty.md  03-custom.md  04-json.md  05-color.md  06-fields.md  07-structs.md
book/src/03-deref/: 00-index.md
book/src/04-build/: 00-index.md  01-setters.md  02-defaults.md  03-custom-names.md  04-generics.md
book/src/05-default/: 00-index.md  01-expressions.md  02-structs.md
book/src/06-get/: 00-index.md  01-modifiers.md  02-option.md  03-callbacks.md
book/src/07-set/: 00-index.md  01-option.md  02-callbacks.md
book/theme/: head.hbs  highlight.css  moxy.css  moxy.js
book/theme/css/: variables.css
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/derive/src/core/: arg.rs  attr.rs  field.rs  mod.rs
crates/derive/src/default/: structs.rs
crates/derive/src/deref/: mod.rs  structs.rs
crates/derive/src/display/: mod.rs  structs.rs
crates/derive/src/params/: structs.rs
crates/derive/src/set/: structs.rs
crates/derive/tests/: build.rs  default.rs  display.rs  get.rs  set.rs
derive/: Cargo.toml
derive/src/: deref.rs  lib.rs  traits.rs
derive/src/attr/: arg.rs  mod.rs
derive/src/core/: arg.rs  attr.rs  field.rs
derive/src/deref/: mod.rs  structs.rs
derive/src/display/: structs.rs  themes.rs
derive/src/params/: mod.rs
derive/tests/: deref.rs  display.rs
src/: lib.rs
