[package]
name = "moxy"
description = "A set of helpful macros for day to day quality of life tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
derive = ["moxy-derive"]

[dependencies]
moxy-derive = { path = "./derive", version = "0.0.0", optional = true }

# ----- Workspace ----- #

[workspace]
resolver = "3"
members = ["derive"]
default-members = ["derive"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/moxy"
homepage = "https://www.github.com/aacebo/moxy"
repository = "https://www.github.com/aacebo/moxy"
