[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://aacebo.github.io/moxy"
homepage = "https://aacebo.github.io/moxy"
repository = "https://www.github.com/aacebo/moxy"

# ----------- Package ----------- #

[package]
name = "moxy"
description = "A set of helpful macros for day to day quality of life tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
derive = ["moxy-derive"]
json = ["moxy-derive/json"]
color = ["moxy-derive/color"]
full = ["moxy-derive/full"]

[dependencies]
moxy-derive = { path = "./crates/derive", version = "0.0.0", optional = true }
