[workspace]
resolver = "3"
members = [".", "crates/*"]
default-members = [".", "crates/*"]

[workspace.package]
version = "0.0.3"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://aacebo.github.io/moxy"
homepage = "https://aacebo.github.io/moxy"
repository = "https://www.github.com/aacebo/moxy"
keywords = ["derive", "macro", "builder", "display", "getset"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns", "no-std"]

# ----------- Package ----------- #

[package]
name = "moxy"
description = "Derive macros that eliminate Rust boilerplate — Display, Deref, Default, Build, Get, Set"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
derive = ["moxy-derive"]
json = ["moxy-derive/json"]
color = ["moxy-derive/color"]
full = ["moxy-derive/full"]

[dependencies]
moxy-derive = { path = "./crates/derive", version = "0.0.3", optional = true }
